# messi-thinking

./: .gitignore  alpha.py  analyze.py  check_converted_samples.py  convert_to_data.py  embedding_similarity_plot.py  entropy.py  entropy_analysis.py  format_converter.py  gianluca.py  model_locations.json  pass_at_k_plot.py  pyproject.toml  question.jsonl  requirements.txt  save_mixed_models.py  single_inference.sh  single_model_inference.py  slurm2.slurm  slurm_magic.slurm  switching_inference.py  switching_inference_llama.py  switching_inference_qwen.py  test.py  translate_dataset.py
analysis/: README.md  correctness.ipynb  embed.py  explore_embeddings.ipynb  model_exploration.ipynb  pass_at_k.py  sanity_checks.ipynb
base_instruct_generation/: generate_traces.py  mm_generation_batch.py  model_utils.py  multi_model_generation.py
dynamic_scaling/: config.py  dynamic_decoder.py  example_usage.py  prompt.py  prompts.py  sampling.py
sorry-bench-202406/train/: dataset_info.json  state.json
