[project]
name = "messi-thinking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.48.2",
    "transformers-stream-generator>=0.0.5",
]
